[gd_scene load_steps=10 format=3 uid="uid://dh8a5067wese3"]

[ext_resource type="Script" path="res://ui/inventory/inventory.gd" id="1_gj1qs"]
[ext_resource type="PackedScene" uid="uid://cy1iar1dkomyr" path="res://ui/inventory/subscenes/stat_hud.tscn" id="1_w07gl"]
[ext_resource type="PackedScene" uid="uid://b6qdv1d0kofyo" path="res://ui/inventory/subscenes/inventory_hud.tscn" id="4_ahg8d"]
[ext_resource type="PackedScene" uid="uid://b4s3pgrykws8i" path="res://ui/subscenes/button_hud.tscn" id="4_qjhs6"]
[ext_resource type="PackedScene" uid="uid://c5u8dk88a3txs" path="res://ui/inventory/subscenes/info_panel.tscn" id="5_l8nab"]
[ext_resource type="Texture2D" uid="uid://dn0jfcq1ly2go" path="res://ui/hud/assets/coin.svg" id="5_rpfif"]
[ext_resource type="FontFile" uid="uid://cjg2va2gx341j" path="res://assets/fonts/nippo/OTF/Nippo-Regular.otf" id="6_whn6t"]
[ext_resource type="Script" path="res://ui/inventory/inventory_sound_effects.gd" id="9_1e5n1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vu06r"]
bg_color = Color(0.0823529, 0.0823529, 0.0823529, 0.74902)

[node name="Inventory" type="CanvasLayer"]
script = ExtResource("1_gj1qs")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vu06r")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="StatHudMargin" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(570, 0)
layout_mode = 2
theme_override_constants/margin_left = 116
theme_override_constants/margin_top = 201
theme_override_constants/margin_bottom = 201

[node name="InventoryStatHud" parent="HBoxContainer/StatHudMargin" instance=ExtResource("1_w07gl")]
unique_name_in_owner = true
custom_minimum_size = Vector2(475, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 201
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 201

[node name="InventoryHud" parent="HBoxContainer/MarginContainer" instance=ExtResource("4_ahg8d")]
unique_name_in_owner = true
custom_minimum_size = Vector2(662, 678)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 201
theme_override_constants/margin_right = 116
theme_override_constants/margin_bottom = 201

[node name="InventoryInfoPanel" parent="HBoxContainer/MarginContainer2" instance=ExtResource("5_l8nab")]
unique_name_in_owner = true
layout_mode = 2

[node name="ButtonHudMargin" type="MarginContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -550.0
offset_top = -94.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 116
theme_override_constants/margin_bottom = 50

[node name="ButtonHBox" type="HBoxContainer" parent="ButtonHudMargin"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 0

[node name="MapButton" parent="ButtonHudMargin/ButtonHBox" instance=ExtResource("4_qjhs6")]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 44)
layout_mode = 2
text = "Karte   "

[node name="MapInventoryMargin" type="MarginContainer" parent="ButtonHudMargin/ButtonHBox"]
layout_mode = 2
theme_override_constants/margin_right = 50

[node name="InventoryButton" parent="ButtonHudMargin/ButtonHBox" instance=ExtResource("4_qjhs6")]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "Zur√ºck zum Spiel   "

[node name="BalanceMargin" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -91.0
offset_right = 316.0
grow_vertical = 0
theme_override_constants/margin_left = 116
theme_override_constants/margin_bottom = 50

[node name="BalanceHBox" type="HBoxContainer" parent="BalanceMargin"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="CoinIcon" type="NinePatchRect" parent="BalanceMargin/BalanceHBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_rpfif")

[node name="CoinBalanceMargin" type="MarginContainer" parent="BalanceMargin/BalanceHBox"]
layout_mode = 2
theme_override_constants/margin_right = 20

[node name="BalanceLabel" type="Label" parent="BalanceMargin/BalanceHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("6_whn6t")
theme_override_font_sizes/font_size = 24
text = "100 Euronen"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = &"Soundeffects"
script = ExtResource("9_1e5n1")

[connection signal="pressed" from="ButtonHudMargin/ButtonHBox/MapButton" to="." method="_on_map_button_pressed"]
[connection signal="pressed" from="ButtonHudMargin/ButtonHBox/InventoryButton" to="." method="_on_inventory_button_pressed"]
